--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,60 +9,7 @@ on:
 
 jobs:
   test:
-    name: Test & Build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
-          run_install: false
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Run linting
-        run: pnpm lint
-
-      - name: Run type checking
-        run: npx tsc --noEmit
-
-      - name: Run tests
-        run: pnpm test:ci
-
-      - name: Build application
-        run: pnpm build
-
-      - name: Upload test coverage
-        uses: actions/upload-artifact@v4
-        if: matrix.node-version == '22.x'
-        with:
-          name: coverage-report
-          path: coverage/
-          retention-days: 30
-
-  lint-check:
-    name: Lint & Type Check
+    name: Lint, Type Check & Test
     runs-on: ubuntu-latest
     
     steps:
@@ -91,8 +38,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Run ESLint
+      - name: Run linting
         run: pnpm lint
 
-      - name: Run TypeScript check
+      - name: Run type checking
         run: npx tsc --noEmit
+
+      - name: Run tests
+        run: pnpm test:ci
