--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.2.3",
+    "node-mocks-http": "^1.17.2",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
